application/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapplication
spec:
  selector:
    app: webapplication
  ports:
  - port: 80
    targetPort: 80
