application/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernet.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    backend:
      serviceName: webapplication
      servicePort: 80
    rules:
      - http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                serviceName: webapplication
                servicePort: 80
